--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PROYECT_NAME",
+  "name": "gv-server-galaxy",
   "version": "0.0.1",
   "description": "",
   "main": "./dist/index.js",
@@ -12,20 +12,28 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Binarysearch/REPOSITORY_NAME.git"
+    "url": "git+https://github.com/Binarysearch/gv-server-galaxy.git"
   },
   "author": "Antonio Ruiz Gutierrez",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Binarysearch/REPOSITORY_NAME/issues"
+    "url": "https://github.com/Binarysearch/gv-server-galaxy/issues"
   },
-  "homepage": "https://github.com/Binarysearch/REPOSITORY_NAME#readme",
+  "homepage": "https://github.com/Binarysearch/gv-server-galaxy#readme",
   "devDependencies": {
     "@types/node": "~8.9.4",
     "ts-loader": "^7.0.0"
   },
   "dependencies": {
+    "@piros/gv-server-commons": "0.0.2",
+    "@piros/ioc": "0.0.5",
+    "@piros/status": "0.0.4",
+    "@piros/tssf": "0.0.19",
     "@types/node": "^13.13.5",
-    "typescript": "^3.8.3"
+    "@types/pg": "^7.14.3",
+    "pg": "^8.2.1",
+    "rxjs": "^6.5.5",
+    "typescript": "^3.8.3",
+    "uuid": "^8.1.0"
   }
 }
